ATLAS-1168: migrate all the mat-selects

--- a/frontend/src/app/core/form-components/select/select.component.html
+++ b/frontend/src/app/core/form-components/select/select.component.html
@@ -5,7 +5,7 @@
   <atlas-spacer *ngIf="label" height="3px"></atlas-spacer>
   <atlas-spacer *ngIf="additionalLabelspace" height="30px"></atlas-spacer>
   <mat-select
-    class="atlas-mat-select-wrapper"
+    class="atlas-select-dropdown"
     (selectionChange)="selectChanged.emit($event)"
     [formControlName]="controlName"
     [attr.data-cy]="dataCy"
