--- a/frontend/src/app/core/form-components/select/select.component.scss
+++ b/frontend/src/app/core/form-components/select/select.component.scss
@@ -1,6 +1,6 @@
 @use 'src/styles/variables' as variables;
 
-.atlas-mat-select-wrapper {
+.atlas-select-dropdown {
   border-radius: variables.$border-radius-small;
 
   height: 34px;
