ATLAS-1168: migrate all the mat-selects

--- a/frontend/src/app/core/components/table-filter/table-filter.component.html
+++ b/frontend/src/app/core/components/table-filter/table-filter.component.html
@@ -52,7 +52,7 @@
       >
         <atlas-select
           (selectChanged)="multiSelectChanged($event, rowIndex, filterConfigIndex)"
-          [initialValue]="multiSelect.activeSearch"
+          [value]="multiSelect.activeSearch"
           dataCy="table-filter-multi-select-{{ rowIndex }}-{{ filterConfigIndex }}"
           [label]="multiSelect.labelTranslationKey"
           [additionalLabelspace]="false"
