--- a/frontend/src/app/pages/tth/dialog-manage-tth/dialog-manage-tth.component.scss
+++ b/frontend/src/app/pages/tth/dialog-manage-tth/dialog-manage-tth.component.scss
@@ -1,33 +1,14 @@
-.slide-track {
-  width: 50px;
-  border-radius: 10px;
-  height: 15px;
+.slide-toggle-row-wrapper {
   display: flex;
+  justify-content: space-between;
   align-items: center;
 }
 
-.slide-track-off {
-  @extend .slide-track;
-  background-color: red;
+.action-btn-wrapper {
+  display: flex;
+  justify-content: space-between;
 }
 
-.slide-track-on {
-  @extend .slide-track;
-  background-color: green;
-
-  .slide-toggle {
-    transform: translateX(25px);
-  }
-}
-
-.slide-btn {
-  border: unset;
-  background-color: yellow;
-}
-
-.slide-toggle {
-  height: 25px;
-  width: 25px;
-  border-radius: 50%;
-  background-color: gray;
+.dialog-container {
+  width: 500px;
 }
