--- a/frontend/src/app/core/form-components/atlas-slide-toggle/atlas-slide-toggle.component.scss
+++ b/frontend/src/app/core/form-components/atlas-slide-toggle/atlas-slide-toggle.component.scss
@@ -42,5 +42,6 @@
   height: 20px;
   width: 20px;
   border-radius: 50%;
-  background-color: variables.$primary-400;
+  background-color: variables.$white;
+  border: 1px solid variables.$gray-500;
 }
