ATLAS-1007: implement button show logic

--- a/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
+++ b/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
@@ -51,7 +51,8 @@
           applicationType="TIMETABLE_HEARING"
           buttonDataCy="download-csv"
           buttonText="TTH.BUTTON.DOWNLOAD_CSV"
-          buttonType="createCheckingPermission"
+          buttonType="cantonCsvDownload"
+          [canton]="cantonShort"
         >
           <ng-template #rightIcon>
             <download-icon class="ps-2"></download-icon>
