ATLAS-1007: refactor button type

--- a/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
+++ b/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
@@ -51,7 +51,7 @@
           applicationType="TIMETABLE_HEARING"
           buttonDataCy="download-csv"
           buttonText="TTH.BUTTON.DOWNLOAD_CSV"
-          buttonType="cantonCsvDownload"
+          buttonType="cantonWritePermission"
           [canton]="cantonShort"
         >
           <ng-template #rightIcon>
