ATLAS-1187: implement canton check for edit button on statement-detail

--- a/frontend/src/app/pages/tth/statement/statement-detail.component.html
+++ b/frontend/src/app/pages/tth/statement/statement-detail.component.html
@@ -253,11 +253,14 @@
   </atlas-button>
   <atlas-button
     (click)="toggleEdit()"
-    *ngIf="CANTON_OPTIONS.length > 0 && !isHearingStatusArchived"
+    *ngIf="!isHearingStatusArchived"
     [footerEdit]="form.enabled"
+    applicationType="TIMETABLE_HEARING"
+    [canton]="cantonShort"
     buttonDataCy="edit"
     buttonText="COMMON.EDIT"
-    buttonType="whiteFooterNonEdit"
+    buttonType="cantonWritePermission"
+    buttonStyleClass="atlas-primary-btn"
   >
   </atlas-button>
   <atlas-button
