ATLAS-1158: implement search in backend, start frontend

--- a/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
+++ b/frontend/src/app/pages/tth/overview-detail/overview-detail.component.html
@@ -179,6 +179,7 @@
       [tableColumns]="tableColumns"
       [tableData]="timeTableHearingStatements"
       [totalCount]="totalCount$"
+      [tableFilterConfig]="TABLE_FILTER_CONFIG"
       data-cy="ttfn"
     ></app-table>
     <router-outlet></router-outlet>
