--- a/frontend/src/app/pages/tth/dialog-manage-tth/dialog-manage-tth.component.scss
+++ b/frontend/src/app/pages/tth/dialog-manage-tth/dialog-manage-tth.component.scss
@@ -4,9 +4,14 @@
   align-items: center;
 }
 
-.action-btn-wrapper {
+.two-action-btn-wrapper {
   display: flex;
   justify-content: space-between;
+}
+
+.one-action-btn-wrapper-right {
+  display: flex;
+  justify-content: flex-end;
 }
 
 .dialog-container {
