ATLAS-1181: Try to avoid npe

--- a/frontend/src/app/pages/tth/statement/statement-detail.component.html
+++ b/frontend/src/app/pages/tth/statement/statement-detail.component.html
@@ -253,8 +253,7 @@
   </atlas-button>
   <atlas-button
     (click)="toggleEdit()"
-    *ngIf="!isHearingStatusArchived"
-    [footerEdit]="form.enabled"
+    *ngIf="!isHearingStatusArchived && !form.enabled"
     applicationType="TIMETABLE_HEARING"
     [canton]="cantonShort"
     buttonDataCy="edit"
