ATLAS-1169: enable save button like in base detail

--- a/frontend/src/app/pages/tth/statement/statement-detail.component.html
+++ b/frontend/src/app/pages/tth/statement/statement-detail.component.html
@@ -273,7 +273,7 @@
   </atlas-button>
   <atlas-button
     (click)="save()"
-    [disabled]="form.untouched"
+    [disabled]="!form.dirty"
     [footerEdit]="form.enabled"
     [submitButton]="true"
     buttonDataCy="save-item"
