--- a/frontend/src/app/pages/tth/statement/statement-detail.component.html
+++ b/frontend/src/app/pages/tth/statement/statement-detail.component.html
@@ -36,6 +36,7 @@
         </div>
         <div class="d-flex flex-column col-6">
           <atlas-select
+            (selectChanged)="cantonSelectionChanged()"
             [formGroup]="form"
             controlName="swissCanton"
             dataCy="swissCanton"
